--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,65 +2,77 @@ name: Frontend CD
 
 on:
   push:
-    branches: [main]
-
-env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/personal-project-frontend
-  VERSION: ${{ github.sha }}
-  NAME: frontend-server
-
+    branches: 
+      - main
+      
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Check out source code
-        uses: actions/checkout@v2
+      - name: Get Github Actions IP
+        id: ip
+        uses: haythem/public-ip@v1.2
 
-      - name: Cache Docker Layers
-        uses: actions/cache@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ env.VERSION }} # runner
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+          
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: '18'
+          
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          pwd
           npm ci
 
       - name: Create .env.production for CD Deploy
         run: |
-          pwd
           echo "${{ secrets.CD_DEPLOY_CONFIG }}" > .env.production
-          cat .env.production
-
-      ## docker build & push to production
-      - name: Docker build & push to prod
+          
+      - name: Build
         run: |
-          echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u${{ github.actor }} --password-stdin
-          docker buildx create --name arm64builder --use
-          docker buildx build --platform linux/amd64,linux/arm64 -f Dockerfile -t ghcr.io/qnfthslr/personal-project-frontend:latest --push .
-          docker logout
-
+          npm run build
+          ls
+          
+      - name: Add Github Actions IP to Security group
+        run: |
+          aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+        
+      - name: SCP Action
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST_PROD }}
+          username: ec2-user
+          key: ${{ secrets.PRIVATE_KEY }}
+          source: "./dist/*"
+          target: "/home/ec2-user/actions-tmp-repo"
+      - name: Remove Github Actions IP From Security Group
+        run: |
+          aws ec2 revoke-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+          
   deploy:
     needs: build
     name: Deploy
     runs-on: [ self-hosted, deploy-frontend ]
     steps:
-      - name: Login to ghcr
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
-
       - name: Deploy to prod
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -69,14 +81,8 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script_stop: true
           script: |
-            pwd
-            ls -al
-            cd health-front
-            pwd
-
-            echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-            docker pull ghcr.io/qnfthslr/personal-project-frontend:latest
+            cd front-deploy
+            cp -r ~/actions-tmp-repo/dist/* ./html/
 
             docker image prune -f
             docker logout
