--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ server {
     server_name localhost;
 
     location / {
-        root /app;
-        index index.html;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html=404;
     }
 }
