--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-horizontal-list": "^1.3.0",
     "vue-router": "^3.5.1",
+    "vueperslides": "^2.16.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
@@ -23,6 +25,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "aws-sdk": "^2.1413.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "~1.32.0",
