--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.1405.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "js-cookie": "^3.0.5",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
