--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "google-auth-library": "^8.9.0",
+    "googleapis": "^122.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "youtube-audio-stream": "^0.3.61"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
