--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "google-auth-library": "^8.9.0",
     "googleapis": "^122.0.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
