--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/js": "^7.2.96",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^3.5.1",
     "vue-the-mask": "^0.11.1",
     "vuetify": "^2.6.0",
