--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -25,8 +26,13 @@
     "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "memory-fs": "^0.5.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
