--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Build and Deploy
 
 on:
-  push:
-    branches:
-      - main
+  repository_dispatch:
+    types: [CI_TEST_FINISH_TRIGGER]
 
 jobs:
   build:
