--- a/.github/workflows/deploy-process.yml
+++ b/.github/workflows/deploy-process.yml
@@ -12,4 +12,7 @@ jobs:
     steps:
       - name: Say Hello Frontend after CI
         run: |
-          echo "Hello Frontend after CI!"
+          curl -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -H 'Accept: application/vnd.github.v3+json' \
+            -u ${{ secrets.GHCR_TOKEN }} \
+            -d '{"event_type": "CI_TEST_FINISH_TRIGGER", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
