--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "dotenv": "^16.3.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "~1.32.0",
@@ -40,7 +47,7 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-     "parserOptions": {
+    "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
     "rules": {
