--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
 version: "3.7"
 services:
-  nginx:
-    image: "nginx:latest"
-    container_name: frontend-deploy-nginx
-    restart: unless-stopped
-    volumes:
-      - /home/ec2-user/fast-front-deploy/conf:/etc/nginx/conf.d
-      - /home/ec2-user/fast-front-deploy/html:/usr/share/nginx/html
-    ports:
-      - "80:80"
-    networks:
-      - app
+  services:
+    frontend:
+      image: ghcr.io/cjw0824/frontend-server:latest
+      container_name: docker-frontend-deploy-server
+      networks:
+        - app
 
 networks:
   app:
