--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -26,6 +27,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.6.2",
     "memory-fs": "^0.5.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
