--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script_stop: true
           script: |
-            cd fast-front-deploy
+            cd swimmingo-project/frontend/actions-runner
             cp -r ~/actions-tmp-repo/dist/* ./html/
 
             docker image prune -f
